# viewmapper

./: .claudeignore  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  README.md  build.sh  clean.sh  release.sh
agent/: CLAUDE.md  dependency-reduced-pom.xml  pom.xml
agent/datasets/: README.md  complex_enterprise.json  realistic_bi_warehouse.json  simple_ecommerce.json
agent/src/main/java/com/github/robfromboulder/viewmapper/: RunCommand.java
agent/src/main/java/com/github/robfromboulder/viewmapper/parser/: DependencyAnalyzer.java  DependencyExtractor.java  TableReference.java  TrinoSqlParser.java
agent/src/main/java/com/github/robfromboulder/viewmapper/service/: DependencyAnalyzer.java
agent/src/test/java/com/github/robfromboulder/viewmapper/agent/: ViewMapperAgentTest.java
agent/src/test/java/com/github/robfromboulder/viewmapper/parser/: TestTrinoSqlParserEdgeCases.java  TestTrinoSqlParserUsage.java  TestTrinoSqlParserWithClauses.java  TrinoSqlParserEdgeTests.java  TrinoSqlParserWithClauseTests.java
viewmapper-agent/: .gitignore  CLAUDE.md  CONTRIBUTING.md  IMPLEMENTATION.md  README.md  TESTING.md
viewmapper-agent/datasets/: moderate_analytics.json
viewmapper-agent/src/main/java/com/github/robfromboulder/viewmapper/: Main.java  RunCommand.java
viewmapper-agent/src/test/java/com/github/robfromboulder/viewmapper/: RunCommandJdbcTest.java
viewmapper-mcp-server/: .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  IMPLEMENTATION.md  README.md  TESTING.md  mcp_server.py  pyproject.toml
viewmapper-mcp-server/tests/: test_mcp_server.py
(+39 files in other folders)
