# ViewMapper MCP Server
# Python wrapper that exposes ViewMapper Java CLI as an MCP tool for Claude Desktop

[project]
name = "viewmapper-mcp-server"
version = "0.1.0"
description = "MCP server for ViewMapper - AI-powered Trino schema exploration"
authors = [
    {name = "Rob Dickinson", email = "rob@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
