# ViewMapper MCP Server
# Python wrapper that exposes ViewMapper Java CLI as an MCP tool for Claude Desktop

[project]
name = "viewmapper-mcp-server"
version = "478"
description = "MCP server for ViewMapper"
authors = [
    {name = "Rob Dickinson"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mcp>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
